--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,8 @@
 
     <string name="avatar_description">User avatar</string>
 
-    <string name="error_message">A error occurred, please retry</string>
+    <string name="error_message">An error occurred, please retry</string>
+    <string name="post_detail_error">Post not found</string>
 
     <string name="retry">Retry</string>
 </resources>
